2003-10-11  Mike Kestner  <mkestner@ximian.com>

	* generator/OpaqueGen.cs (FromNativeReturn): just do a
	new on the type.  GLib.Opaque.GetOpaque was apparently an
	homage to GetObject that just seems wrong.

2003-10-11  Mike Kestner  <mkestner@ximian.com>

	* gtk/gtk-api.xml : regenerated
	* sources/Gtk.metadata : markes some out tags on 
	TreeView.GetCursor.  [Fixes #49556]

2003-10-11  Mike Kestner  <mkestner@ximian.com>

	* generator/Parameters.cs : Properly handle out params for 
	Object and Opaque types.
	* gtk/ListStore.custom: remove out on GetValue overload
	* gtk/TreeStore.custom: remove out on GetValue overload
	* gtk/gtk-api.xml : regenerated
	* sources/Gtk.metadata : remove some incorrect out tags
	[Fixes #49517] for real this time.

2003-10-10  Mike Kestner  <mkestner@ximian.com>

	* gtk/gtk-api.xml : regenerated
	* sources/Gtk.metadata : mark pos and path pass_as="out" for
	TreeView.GetDragDestRow and GetDestRowAtPos [Fixes #49517]

2003-10-10  Mike Kestner  <mkestner@ximian.com>

	* gtk/gtk-api.xml : regenerated
	* gtk/TreePath.custom : implement Indices property by
	hand. Patch from tds00mahi@thn.htu.se (malte) [Fixes #49518]
	* sources/Gtk.metadata : hide TreePath.Indices.

2003-10-10  Mike Kestner  <mkestner@ximian.com>

	* gtk/gtk-api.xml : regenerated
	* gtk/FileSelection.custom : implement the Selections property by
	hand.  [Fixes #49254]
	* sources/Gtk.metadata : hide FileSelection.GetSelections.

2003-10-10  Mike Kestner  <mkestner@ximian.com>

	* */makefile.win32 : remove api dir from build and fix clean target

2003-10-10  Mike Kestner  <mkestner@ximian.com>

	* gdk/gdk-api.xml : regenerated
	* sources/Gdk.metadata : mark Cursor opaque. mark confine_to and
	cursor null_ok in Gdk.Pointer.Grab. [Fixes #48273]

2003-10-09  Mike Kestner  <mkestner@ximian.com>

	* generator/Statistics.cs (Report): pretty it up.
	* generator/SymbolTable.cs : handle const-xmlChar as ConstString

2003-10-09  Mike Kestner  <mkestner@ximian.com>
