@@ -3209,11 +3209,11 @@
       <method name="GetLabel" cname="gtk_frame_get_label">
         <return-type type="const-gchar*"/>
       </method>
-      <method name="GetLabelAlign" cname="gtk_frame_get_label_align">
+      <method name="GetLabelAlign" cname="gtk_frame_get_label_align" hidden="1">
         <return-type type="void"/>
         <parameters>
-          <parameter type="gfloat*" name="xalign" pass_as="out"/>
-          <parameter type="gfloat*" name="yalign" pass_as="out"/>
+          <parameter type="gfloat*" name="xalign"/>
+          <parameter type="gfloat*" name="yalign"/>
         </parameters>
       </method>
       <method name="GetLabelWidget" cname="gtk_frame_get_label_widget">
@@ -3236,7 +3236,7 @@
           <parameter type="const-gchar*" name="label"/>
         </parameters>
       </method>
-      <method name="SetLabelAlign" cname="gtk_frame_set_label_align">
+      <method name="SetLabelAlign" cname="gtk_frame_set_label_align" hidden="1">
         <return-type type="void"/>
         <parameters>
           <parameter type="gfloat" name="xalign"/>
@@ -3283,7 +3283,7 @@
       <field cname="attach_allocation" type="GtkAllocation"/>
       <field cname="float_allocation" type="GtkAllocation"/>
       <property name="Shadow" cname="shadow" type="GtkShadowType" readable="true" writeable="true"/>
-      <property name="ShadowType" cname="shadow_type" type="GtkShadowType" readable="true" writeable="true"/>
+      <property name="ShadowType" cname="shadow_type" type="GtkShadowType" readable="true" writeable="true" hidden="1"/>
       <property name="HandlePosition" cname="handle_position" type="GtkPositionType" readable="true" writeable="true"/>
       <property name="SnapEdge" cname="snap_edge" type="GtkPositionType" readable="true" writeable="true"/>
       <property name="SnapEdgeSet" cname="snap_edge_set" type="gboolean" readable="true" writeable="true"/>
@@ -6386,7 +6386,7 @@
           <parameter type="guint" name="spacing"/>
         </parameters>
       </method>
-      <method name="SetColSpacings" cname="gtk_table_set_col_spacings">
+      <method name="SetColSpacings" cname="gtk_table_set_col_spacings" hidden="1">
         <return-type type="void"/>
         <parameters>
           <parameter type="guint" name="spacing"/>
@@ -6405,7 +6405,7 @@
           <parameter type="guint" name="spacing"/>
         </parameters>
       </method>
-      <method name="SetRowSpacings" cname="gtk_table_set_row_spacings">
+      <method name="SetRowSpacings" cname="gtk_table_set_row_spacings" hidden="1">
         <return-type type="void"/>
         <parameters>
           <parameter type="guint" name="spacing"/>
