@@ -1,5 +1,12 @@
 2003-10-11  Mike Kestner  <mkestner@ximian.com>
 
+	* gtk/gtk-api.xml : regenerated
+	* sources/Gtk.metadata : applied patch from jluke for hides
+	requested in bug #38660. Also cleaned up the sprawling "hidden"
+	rules to reduce the overall footprint.
+
+2003-10-11  Mike Kestner  <mkestner@ximian.com>
+
 	* generator/OpaqueGen.cs (FromNativeReturn): just do a
 	new on the type.  GLib.Opaque.GetOpaque was apparently an
 	homage to GetObject that just seems wrong.
